<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="agree_label">Лицензионное соглашение</string>
    <string name="agree_text">Лицензионный договор — средство «распоряжения исключительным правом», гражданско-правовой договор, по которому «одна сторона — обладатель исключительного права на результат интеллектуальной деятельности или на средство индивидуализации (лицензиар) — предоставляет или обязуется предоставить другой стороне (лицензиату) право использования такого результата или средства в предусмотренных образцом лицензионного договора пределах.».[2] Следовательно, в лицензионном договоре могут предоставляться авторские, патентные, смежные, а также другие права.
    Лицензионный договор — средство «распоряжения исключительным правом», гражданско-правовой договор, по которому «одна сторона — обладатель исключительного права на результат интеллектуальной деятельности или на средство индивидуализации (лицензиар) — предоставляет или обязуется предоставить другой стороне (лицензиату) право использования такого результата или средства в предусмотренных образцом лицензионного договора пределах.».[2] Следовательно, в лицензионном договоре могут предоставляться авторские, патентные, смежные, а также другие права</string>
    >
    <string name="agree_btn">Подробнее</string>
    <string name="next_btn">Далее</string>
    <string name="back_btn">Назад</string>
    <string name="check_box_agree">Я согласен(а) с условиями</string>
</resources>